<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        style="@style/wrpV"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <Button
            style="@style/btn"
            android:id="@+id/btn_wb_l"
            android:visibility="gone"
            android:text="@string/txt_BlackAndWhiteL"
            android:onClick="onButtonClick"/>
        <ImageView
            style="@style/txt"
            android:id="@+id/img_level_mono"
            android:scaleType="fitCenter"
            android:onClick="onImgClick"/>

        <View
            style="@style/sepL"/>

        <Button
            style="@style/btn"
            android:id="@+id/btn_wbrl"
            android:visibility="gone"
            android:text="@string/txt_BlackWhiteRedL"
            android:onClick="onButtonClick"/>
        <ImageView
            style="@style/txt"
            android:id="@+id/img_level_color"
            android:scaleType="fitCenter"
            android:onClick="onImgClick"/>

        <View
            style="@style/sepL"/>

        <Button
            style="@style/btn"
            android:id="@+id/btn_wb_d"
            android:visibility="gone"
            android:text="@string/txt_BlackAndWhiteD"
            android:onClick="onButtonClick"/>
        <ImageView
            style="@style/txt"
            android:id="@+id/img_dither_mono"
            android:scaleType="fitCenter"
            android:onClick="onImgClick"/>

        <View
            style="@style/sepL"/>

        <Button
            style="@style/btn"
            android:id="@+id/btn_wb_d2"
            android:visibility="gone"
            android:text="@string/txt_BlackAndWhiteD"
            android:onClick="onButtonClick"/>
        <ImageView
            style="@style/txt"
            android:id="@+id/img_dither_mono2"
            android:scaleType="fitCenter"
            android:onClick="onImgClick"/>

        <View
            style="@style/sepL"/>

        <Button
            style="@style/btn"
            android:id="@+id/btn_wbrd"
            android:visibility="gone"
            android:text="@string/txt_BlackWhiteRedD"
            android:onClick="onButtonClick"/>
        <ImageView
            style="@style/txt"
            android:id="@+id/img_dither_color"
            android:scaleType="fitCenter"
            android:onClick="onImgClick"/>

        <View
            style="@style/sepL"/>

        <Button
            style="@style/btn"
            android:id="@+id/btn_wbrd2"
            android:visibility="gone"
            android:text="@string/txt_BlackWhiteRedD2"
            android:onClick="onButtonClick"/>
        <ImageView
            style="@style/txt"
            android:id="@+id/img_dither_color2"
            android:scaleType="fitCenter"
            android:onClick="onImgClick"/>

        <View
            style="@style/sepL"/>

        <TextView style="@style/txt" android:id="@+id/txt_indexed" android:visibility="invisible"/>
        <ImageView style="@style/txt" android:id="@+id/img_indexed" android:scaleType="fitCenter" android:visibility="gone"/>

        <LinearLayout style="@style/btn" android:orientation="horizontal">
            <!--        <Button style="@style/btn50" android:text="@string/btn_okey" android:onClick="onOk"    />-->
            <Button style="@style/btn50" android:text="@string/btn_cncl" android:onClick="onCancel"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>